{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 324,
  "lineage": "95f0dde2-a311-2d39-aa38-74d3b85c3c6b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0393ee318b08f4511",
            "arn": "arn:aws:ec2:us-east-1:007572960009:instance/i-0052b748e23ddebde",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0052b748e23ddebde",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "var.key_name",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ad13f08d00dc6cc1",
            "private_dns": "ip-192-168-101-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.101.165",
            "public_dns": "ec2-54-208-223-216.compute-1.amazonaws.com",
            "public_ip": "54.208.223.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d9c89f8ce0e63e2",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01248fc1f9e27be5e",
            "tags": {
              "Env": "Utrains_Best_IT_School",
              "Name": "Module-Terraform-EC2-instance",
              "created-by": "Gaetan",
              "team": "Group10"
            },
            "tags_all": {
              "Env": "Utrains_Best_IT_School",
              "Name": "Module-Terraform-EC2-instance",
              "created-by": "Gaetan",
              "team": "Group10"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a96cf0c51d547f4"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:security-group/sg-03a96cf0c51d547f4",
            "description": "allow traffic on 22 and 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a96cf0c51d547f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "22 for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 for http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "module-project-sg",
            "name_prefix": "",
            "owner_id": "007572960009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "module-project-sg",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_school",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module-project-sg",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_school",
              "team": "Group10"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:network-acl/acl-095d417c9c7e0a1c8",
            "default_network_acl_id": "acl-095d417c9c7e0a1c8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-095d417c9c7e0a1c8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "007572960009",
            "subnet_ids": [
              "subnet-01248fc1f9e27be5e",
              "subnet-0484eacf0f1cbe94b",
              "subnet-069e151fa3d4ec1ea",
              "subnet-0984e5ddd6bcab43c"
            ],
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:route-table/rtb-0dcfe5bb13b2a8289",
            "default_route_table_id": "rtb-0dcfe5bb13b2a8289",
            "id": "rtb-0dcfe5bb13b2a8289",
            "owner_id": "007572960009",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:security-group/sg-0264b007038be4dd9",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0264b007038be4dd9",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "007572960009",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:internet-gateway/igw-050ca7ea38c937245",
            "id": "igw-050ca7ea38c937245",
            "owner_id": "007572960009",
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-050ca7ea38c937245",
            "id": "r-rtb-07340e30db3af467a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07340e30db3af467a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:route-table/rtb-04385b0ee8f2344b1",
            "id": "rtb-04385b0ee8f2344b1",
            "owner_id": "007572960009",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:route-table/rtb-0e92aaf886441f0b9",
            "id": "rtb-0e92aaf886441f0b9",
            "owner_id": "007572960009",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:route-table/rtb-07340e30db3af467a",
            "id": "rtb-07340e30db3af467a",
            "owner_id": "007572960009",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007940e43fd6968c8",
            "route_table_id": "rtb-04385b0ee8f2344b1",
            "subnet_id": "subnet-0484eacf0f1cbe94b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d976e6e97b8f0a03",
            "route_table_id": "rtb-0e92aaf886441f0b9",
            "subnet_id": "subnet-0984e5ddd6bcab43c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3e57ad064ef20e5",
            "route_table_id": "rtb-07340e30db3af467a",
            "subnet_id": "subnet-01248fc1f9e27be5e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a51343fcd563bc4",
            "route_table_id": "rtb-07340e30db3af467a",
            "subnet_id": "subnet-069e151fa3d4ec1ea"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:subnet/subnet-0484eacf0f1cbe94b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0484eacf0f1cbe94b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007572960009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:subnet/subnet-0984e5ddd6bcab43c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0984e5ddd6bcab43c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007572960009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:subnet/subnet-01248fc1f9e27be5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01248fc1f9e27be5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007572960009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:subnet/subnet-069e151fa3d4ec1ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069e151fa3d4ec1ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "007572960009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "vpc_id": "vpc-00b5cbd54381c5e78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:007572960009:vpc/vpc-00b5cbd54381c5e78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-095d417c9c7e0a1c8",
            "default_route_table_id": "rtb-0dcfe5bb13b2a8289",
            "default_security_group_id": "sg-0264b007038be4dd9",
            "dhcp_options_id": "dopt-0d2e3a9a008f9dee7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b5cbd54381c5e78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dcfe5bb13b2a8289",
            "owner_id": "007572960009",
            "tags": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            },
            "tags_all": {
              "Name": "module_project_vpc",
              "created-by": "Gaetan",
              "env": "Utrains_Best_IT_School",
              "team": "Group10"
            }
          }
        }
      ]
    }
  ]
}